more topology work, putting things in graph structure

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,7 +17,10 @@
             <version>${project.version}</version>
             <groupId>${project.groupId}</groupId>
         </dependency>
-
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
