multi-layer pathfinding

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,8 +18,12 @@
             <groupId>${project.groupId}</groupId>
         </dependency>
         <dependency>
-            <groupId>org.jgrapht</groupId>
-            <artifactId>jgrapht-core</artifactId>
+            <groupId>net.sf.jung</groupId>
+            <artifactId>jung-graph-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.jung</groupId>
+            <artifactId>jung-algorithms</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
