--- a/ds/config/application.properties
+++ b/ds/config/application.properties
@@ -1,38 +1,41 @@
 server.port=8000
 
-server.ssl.enabled=${oscars.defaults.ssl_enabled}
-server.ssl.key-store=${oscars.defaults.ssl_key_store}
-server.ssl.key-store-type=${oscars.defaults.ssl_key_store_type}
-server.ssl.key-store-password=${oscars.defaults.ssl_key_store_password}
-server.ssl.key-alias=${oscars.defaults.ssl_key_alias}
-server.ssl.key-password=${oscars.defaults.ssl_key_password}
-server.ssl.ciphers=${oscars.defaults.ssl_ciphers}
+server.ssl.enabled=${startupDefaults.ssl_enabled}
+server.ssl.key-store=${startupDefaults.ssl_key_store}
+server.ssl.key-store-type=${startupDefaults.ssl_key_store_type}
+server.ssl.key-store-password=${startupDefaults.ssl_key_store_password}
+server.ssl.key-alias=${startupDefaults.ssl_key_alias}
+server.ssl.key-password=${startupDefaults.ssl_key_password}
+server.ssl.ciphers=${startupDefaults.ssl_ciphers}
 
-security.basic.enabled=${oscars.defaults.sec_basic_enabled}
-security.user.name=${oscars.defaults.sec_user_name}
-security.user.password=${oscars.defaults.sec_user_password}
+security.basic.enabled=${startupDefaults.sec_basic_enabled}
+security.user.name=${startupDefaults.sec_user_name}
+security.user.password=${startupDefaults.sec_user_password}
 
 logging.config=config/logback.xml
 logging.file=myds.log
 
 spring.main.banner-mode=off
 
-oscars.defaults.name=defaults
-oscars.defaults.sec_basic_enabled=true
-oscars.defaults.sec_user_name=oscars
-oscars.defaults.sec_user_password=oscars-shared
 
-oscars.defaults.ssl_enabled=true
-oscars.defaults.ssl_key_store=config/oscars.jks
-oscars.defaults.ssl_key_store_type=JKS
-oscars.defaults.ssl_key_store_password=changeit
-oscars.defaults.ssl_key_alias=oscars
-oscars.defaults.ssl_key_password=changeit
-oscars.defaults.ssl_ciphers=TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+pss.defaultTemplateDir=config/pssTemplates
 
-oscars.startupConfigs[0].name=webui
-oscars.startupConfigs[0].server_port=8001
+startupDefaults.name=defaults
+startupDefaults.sec_basic_enabled=true
+startupDefaults.sec_user_name=oscars
+startupDefaults.sec_user_password=oscars-shared
 
-oscars.startupConfigs[1].name=core
-oscars.startupConfigs[1].server_port=8002
+startupDefaults.ssl_enabled=true
+startupDefaults.ssl_key_store=config/oscars.jks
+startupDefaults.ssl_key_store_type=JKS
+startupDefaults.ssl_key_store_password=changeit
+startupDefaults.ssl_key_alias=oscars
+startupDefaults.ssl_key_password=changeit
+startupDefaults.ssl_ciphers=TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+
+startupConfigs[0].name=webui
+startupConfigs[0].server_port=8001
+
+startupConfigs[1].name=core
+startupConfigs[1].server_port=8002
 
