externalize some hardcoded things

--- a/ds/config/application.properties
+++ b/ds/config/application.properties
@@ -1,41 +1,45 @@
 server.port=8000
 
-server.ssl.enabled=${startupDefaults.ssl_enabled}
-server.ssl.key-store=${startupDefaults.ssl_key_store}
-server.ssl.key-store-type=${startupDefaults.ssl_key_store_type}
-server.ssl.key-store-password=${startupDefaults.ssl_key_store_password}
-server.ssl.key-alias=${startupDefaults.ssl_key_alias}
-server.ssl.key-password=${startupDefaults.ssl_key_password}
-server.ssl.ciphers=${startupDefaults.ssl_ciphers}
+server.ssl.enabled=${startup.defaults.ssl_enabled}
+server.ssl.key-store=${startup.defaults.ssl_key_store}
+server.ssl.key-store-type=${startup.defaults.ssl_key_store_type}
+server.ssl.key-store-password=${startup.defaults.ssl_key_store_password}
+server.ssl.key-alias=${startup.defaults.ssl_key_alias}
+server.ssl.key-password=${startup.defaults.ssl_key_password}
+server.ssl.ciphers=${startup.defaults.ssl_ciphers}
 
-security.basic.enabled=${startupDefaults.sec_basic_enabled}
-security.user.name=${startupDefaults.sec_user_name}
-security.user.password=${startupDefaults.sec_user_password}
+security.basic.enabled=${startup.defaults.sec_basic_enabled}
+security.user.name=${startup.defaults.sec_user_name}
+security.user.password=${startup.defaults.sec_user_password}
 
 logging.config=config/logback.xml
 logging.file=myds.log
 
 spring.main.banner-mode=off
 
+topo.import-from=config/topo.json
 
-pss.defaultTemplateDir=config/pssTemplates
+pss.default-template-dir=config/pssTemplates
 
-startupDefaults.name=defaults
-startupDefaults.sec_basic_enabled=true
-startupDefaults.sec_user_name=oscars
-startupDefaults.sec_user_password=oscars-shared
+authnz.username=admin
+authnz.password=oscars
 
-startupDefaults.ssl_enabled=true
-startupDefaults.ssl_key_store=config/oscars.jks
-startupDefaults.ssl_key_store_type=JKS
-startupDefaults.ssl_key_store_password=changeit
-startupDefaults.ssl_key_alias=oscars
-startupDefaults.ssl_key_password=changeit
-startupDefaults.ssl_ciphers=TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+startup.defaults.name=defaults
+startup.defaults.sec_basic_enabled=true
+startup.defaults.sec_user_name=oscars
+startup.defaults.sec_user_password=oscars-shared
 
-startupConfigs[0].name=webui
-startupConfigs[0].server_port=8001
+startup.defaults.ssl_enabled=true
+startup.defaults.ssl_key_store=config/oscars.jks
+startup.defaults.ssl_key_store_type=JKS
+startup.defaults.ssl_key_store_password=changeit
+startup.defaults.ssl_key_alias=oscars
+startup.defaults.ssl_key_password=changeit
+startup.defaults.ssl_ciphers=TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
 
-startupConfigs[1].name=core
-startupConfigs[1].server_port=8002
+startup.modules[0].name=webui
+startup.modules[0].server_port=8001
+
+startup.modules[1].name=core
+startup.modules[1].server_port=8002
 
