integration tests, topo rework

--- a/check/pom.xml
+++ b/check/pom.xml
@@ -24,6 +24,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
+        <dependency>
             <artifactId>core</artifactId>
             <version>${project.version}</version>
             <groupId>${project.groupId}</groupId>
@@ -65,7 +72,9 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
                 <configuration>
                     <skipTests>${unit-tests.skip}</skipTests>
                     <excludes>
@@ -74,7 +83,9 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
                 <executions>
                     <execution>
                         <id>integration-test</id>
