--- a/check/config/application.properties
+++ b/check/config/application.properties
@@ -12,11 +12,11 @@ security.basic.enabled=${startup.defaults.sec_basic_enabled}
 security.user.name=${startup.defaults.sec_user_name}
 security.user.password=${startup.defaults.sec_user_password}
 
-logging.config=config/logback.xml
-logging.file=myds.log
-
 spring.main.banner-mode=off
 
+rest.internal-username=${startup.defaults.sec_user_name}
+rest.internal-password=${startup.defaults.sec_user_password}
+rest.internal-truststore-path=${startup.defaults.ssl_key_store}
 
 topo.devices-filename=config/devices.json
 topo.adjcies-filename=config/adjcies.json
@@ -40,12 +40,13 @@ startup.defaults.ssl_key_alias=oscars
 startup.defaults.ssl_key_password=changeit
 startup.defaults.ssl_ciphers=TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
 
-startup.defaults.rest_username=oscars
-startup.defaults.rest_password=oscars-shared
-startup.defaults.rest_truststore=./config/oscars.jks
+startup.defaults.rest.internal-username=${startup.defaults.sec_user_name}
+startup.defaults.rest.internal-password=${startup.defaults.sec_user_password}
+startup.defaults.rest.internal-truststore-path=${startup.defaults.ssl_key_store}
 
 startup.modules[0].name=webui
 startup.modules[0].server_port=8001
 
 startup.modules[1].name=core
 startup.modules[1].server_port=8002
+
