--- a/check/config/application.properties
+++ b/check/config/application.properties
@@ -40,9 +40,9 @@ startup.defaults.ssl_key_alias=oscars
 startup.defaults.ssl_key_password=changeit
 startup.defaults.ssl_ciphers=TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
 
-startup.defaults.rest.internal-username=${startup.defaults.sec_user_name}
-startup.defaults.rest.internal-password=${startup.defaults.sec_user_password}
-startup.defaults.rest.internal-truststore-path=${startup.defaults.ssl_key_store}
+startup.defaults.rest_username=${startup.defaults.sec_user_name}
+startup.defaults.rest_password=${startup.defaults.sec_user_password}
+startup.defaults.rest_truststore=${startup.defaults.ssl_key_store}
 
 startup.modules[0].name=webui
 startup.modules[0].server_port=8001
