work on persisting / transferring reserved resources

--- a/check/config/application.properties
+++ b/check/config/application.properties
@@ -1,5 +1,7 @@
 server.port=8000
 
+logging.level.org.springframework=ERROR
+
 server.ssl.enabled=${startup.defaults.ssl_enabled}
 server.ssl.key-store=${startup.defaults.ssl_key_store}
 server.ssl.key-store-type=${startup.defaults.ssl_key_store_type}
