--- a/ds/config/application.properties
+++ b/ds/config/application.properties
@@ -17,6 +17,10 @@ logging.file=myds.log
 
 spring.main.banner-mode=off
 
+rest.internal-username=${startup.defaults.sec_user_name}
+rest.internal-password=${startup.defaults.sec_user_password}
+rest.internal-truststore-path=${startup.defaults.ssl_key_store}
+
 
 topo.devices-filename=config/devices.json
 topo.adjcies-filename=config/adjcies.json
