--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,11 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.4</version>
             </dependency>
-
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>2.6.1</version>
+            </dependency>
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
