--- a/core/pom.xml
+++ b/core/pom.xml
@@ -92,6 +92,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>2.4.6</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
