--- a/pom.xml
+++ b/pom.xml
@@ -60,16 +60,25 @@
                 <artifactId>assertj-core</artifactId>
                 <version>2.3.0</version>
             </dependency>
+
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-all</artifactId>
                 <version>1.10.19</version>
             </dependency>
+
             <dependency>
                 <groupId>com.jayway.restassured</groupId>
                 <artifactId>rest-assured</artifactId>
                 <version>2.9.0</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.statemachine</groupId>
+                <artifactId>spring-statemachine-core</artifactId>
+                <version>1.1.0.RELEASE</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-envers</artifactId>
@@ -115,7 +124,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.16.6</version>
+                <version>1.16.10</version>
             </dependency>
 
             <dependency>
@@ -135,16 +144,18 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.4</version>
             </dependency>
+
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>2.6.1</version>
             </dependency>
+
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>1.3.5.RELEASE</version>
+                <version>1.3.6.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
