--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,11 @@
                 <artifactId>typeahead.js</artifactId>
                 <version>0.11.1</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>d3js</artifactId>
+                <version>3.5.17</version>
+            </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
