--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,27 @@
     </modules>
     <profiles>
         <profile>
+            <id>noTest</id>
+            <activation>
+                <property>
+                    <name>noTest</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.19.1</version>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>integration</id>
             <properties>
                 <unit-tests.skip>false</unit-tests.skip>
@@ -162,7 +183,6 @@
 
         </dependencies>
     </dependencyManagement>
-
     <build>
         <pluginManagement>
             <plugins>
