--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -21,9 +21,10 @@ rest.internal-username=${startup.defaults.sec_user_name}
 rest.internal-password=${startup.defaults.sec_user_password}
 rest.internal-truststore-path=${startup.defaults.ssl_key_store}
 
+ui.positions-file=config/positions.json
 
-topo.devices-filename=config/devices.json
-topo.adjcies-filename=config/adjcies.json
+topo.devices-filename=config/esnet-devices.json
+topo.adjcies-filename=config/esnet-adjacencies.json
 
 pss.default-template-dir=config/pssTemplates
 pss.template-extension=ftl
