--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
                 <artifactId>thymeleaf-extras-springsecurity4</artifactId>
                 <version>2.1.2.RELEASE</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.webjars</groupId>
+                <artifactId>momentjs</artifactId>
+                <version>2.15.0</version>
+            </dependency>
             <dependency>
                 <groupId>org.webjars</groupId>
                 <artifactId>x-editable-bootstrap</artifactId>
