--- a/webui/pom.xml
+++ b/webui/pom.xml
@@ -13,7 +13,10 @@
 
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>momentjs</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>x-editable-bootstrap</artifactId>
