startup performance improvements

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -15,6 +15,9 @@ security.user.password=${startup.defaults.sec_user_password}
 # logging.config=config/logback.xml
 # logging.file=core.log
 
+# logging.level.org.hibernate: ERROR
+# logging.level.org.springframework.boot.autoconfigure.logging=DEBUG
+
 spring.main.banner-mode=off
 
 rest.internal-username=${startup.defaults.sec_user_name}
