frontend fixes; can submit a reservation all the way to hold then commit

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -24,6 +24,7 @@ rest.internal-username=${startup.defaults.sec_user_name}
 rest.internal-password=${startup.defaults.sec_user_password}
 rest.internal-truststore-path=${startup.defaults.ssl_key_store}
 
+proc.timeout-held-after=300
 ui.positions-file=config/positions.json
 
 topo.devices-filename=config/esnet-devices.json
