--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
                 <artifactId>spring-data-envers</artifactId>
                 <version>0.3.0.RELEASE</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.security.extensions</groupId>
+                <artifactId>spring-security-saml2-core</artifactId>
+                <version>1.0.2.RELEASE</version>
+            </dependency>
 
             <dependency>
                 <groupId>net.sf.jung</groupId>
