display improvements, minor topology  production and pss fixes

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -47,7 +47,7 @@ startup.defaults.ssl_key_store_type=JKS
 startup.defaults.ssl_key_store_password=changeit
 startup.defaults.ssl_key_alias=oscars
 startup.defaults.ssl_key_password=changeit
-startup.defaults.ssl_ciphers=TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+startup.defaults.ssl_ciphers=TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256, TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
 
 startup.defaults.rest_username=oscars
 startup.defaults.rest_password=oscars-shared
