Build out WhatIf module as a separate application (like WebUI). Break bandwidth avail endpoints into separate controller.

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -56,3 +56,6 @@ startup.defaults.rest_truststore=./config/oscars.jks
 startup.modules[0].name=webui
 startup.modules[0].server_port=8001
 
+startup.modules[1].name=whatif
+startup.modules[1].server_port=8009
+
