--- a/webui/package.json
+++ b/webui/package.json
@@ -2,11 +2,11 @@
   "name": "oscars-webui",
   "version": "1.0.0",
   "description": "OSCARS web ui",
-
   "dependencies": {
     "vis": "^4.17.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router": "~3.0.0",
     "rest": "^2.0.0",
     "webpack": "^1.14.0"
   },
