--- a/webui/package.json
+++ b/webui/package.json
@@ -6,7 +6,7 @@
     "vis": "^4.17.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "~3.0.0",
+    "react-router": "^3.0.0",
     "rest": "^2.0.0",
     "webpack": "^1.14.0"
   },
