--- a/webui/package.json
+++ b/webui/package.json
@@ -8,7 +8,9 @@
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "rest": "^2.0.0",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "react-datetime": "~2.8.3",
+    "moment": "~2.17.1"
   },
   "scripts": {
     "watch": "webpack --watch -d"
