--- a/webui/package.json
+++ b/webui/package.json
@@ -10,7 +10,8 @@
     "rest": "^2.0.0",
     "webpack": "^1.14.0",
     "react-datetime": "~2.8.3",
-    "moment": "~2.17.1"
+    "moment": "~2.17.1",
+    "deep-equal": "~1.0.1"
   },
   "scripts": {
     "watch": "webpack --watch -d"
