PSS router config generation work default connection ID shortening IP addresses for PSS

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -32,6 +32,10 @@ topo.adjcies-filename=config/esnet-adjacencies.json
 
 pss.default-template-dir=config/pssTemplates
 pss.template-extension=ftl
+pss.addresses-filename=config/esnet-addrs.json
+pss.vcid-range=7000-7999
+pss.sdpid-range=7000-7999
+pss.qosid-range=7000-7999
 
 authnz.username=admin
 authnz.password=oscars
