--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,11 @@
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>2.6.1</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.hashids</groupId>
+                <artifactId>hashids</artifactId>
+                <version>1.0.1</version>
+            </dependency>
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
