Add slider and basic components to What-if page.

--- a/webui/package.json
+++ b/webui/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "OSCARS web ui",
   "dependencies": {
-    "vis": "^4.17.0",
+    "deep-equal": "~1.0.1",
+    "moment": "~2.17.1",
     "react": "^15.4.1",
+    "react-datetime": "~2.8.3",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "rest": "^2.0.0",
-    "webpack": "^1.14.0",
-    "react-datetime": "~2.8.3",
-    "moment": "~2.17.1",
-    "deep-equal": "~1.0.1"
+    "vis": "^4.17.0",
+    "webpack": "^1.14.0"
   },
   "scripts": {
     "watch": "webpack --watch -d"
