--- a/webui/package.json
+++ b/webui/package.json
@@ -8,6 +8,7 @@
     "react": "^15.4.1",
     "react-datetime": "~2.8.3",
     "react-dom": "^15.4.1",
+    "react-dropdown": "^1.2.0",
     "react-router": "^3.0.0",
     "rest": "^2.0.0",
     "vis": "^4.17.0",
