first attack at PSS breakout

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>core</module>
         <module>shared</module>
+        <module>pss</module>
         <module>webui</module>
         <module>check</module>
         <module>whatif</module>
