relocated templates, adding rancid properties

--- a/pss/config/application.properties
+++ b/pss/config/application.properties
@@ -1,1 +1,5 @@
-check.filename=config/devices.json
+pss.check-filename=config/devices.json
+pss.rancid-dir=/opt/rancid
+pss.cloginrc=config/cloginrc.txt
+
+spring.freemarker.template-loader-path="classpath:templates, classpath:templates/alu, classpath:templates/mx, classpath:templates/ex, classpath:templates"
