--- a/webui/package.json
+++ b/webui/package.json
@@ -23,6 +23,7 @@
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "webpack-dev-server": "~1.16.2"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^2.3.0"
   }
 }
