Added PSS rancid execution, start of control plane checking

--- a/pss/config/application.properties
+++ b/pss/config/application.properties
@@ -1,5 +1,11 @@
 pss.check-filename=config/devices.json
-pss.rancid-dir=/opt/rancid
-pss.cloginrc=config/cloginrc.txt
+pss.rancid-host=noc5.es.net
+pss.rancid-dir=/usr/local/libexec/rancid
+pss.cloginrc=/usr/local/esnet/lib/cloginrc
+
+pss.perform-getconfig=true
+pss.getconfig-host=noc5.es.net
+pss.local-getconfig-path=noc5.es.net
+
 
 spring.freemarker.template-loader-path="classpath:templates, classpath:templates/alu, classpath:templates/mx, classpath:templates/ex, classpath:templates"
