--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,11 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.4</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>zt-exec</artifactId>
+                <version>1.9</version>
+            </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
