--- a/pss/pom.xml
+++ b/pss/pom.xml
@@ -8,8 +8,27 @@
         <groupId>net.es.oscars</groupId>
         <version>0.7.0</version>
     </parent>
+    <properties>
+        <testcase.groups>net.es.oscars.pss.UnitTests</testcase.groups>
+    </properties>
+
 
     <artifactId>pss</artifactId>
+
+    <profiles>
+        <profile>
+            <id>unit</id>
+            <properties>
+                <testcase.groups>net.es.oscars.pss.UnitTests</testcase.groups>
+            </properties>
+        </profile>
+        <profile>
+            <id>integration</id>
+            <properties>
+                <testcase.groups>net.es.oscars.pss.Integrations</testcase.groups>
+            </properties>
+        </profile>
+    </profiles>
 
 
     <dependencies>
@@ -52,6 +71,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -81,6 +107,21 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.13</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <groups>${testcase.groups}</groups>
+                </configuration>
             </plugin>
         </plugins>
     </build>
