--- a/pss/config/application.properties
+++ b/pss/config/application.properties
@@ -8,4 +8,4 @@ pss.getconfig-host=noc5.es.net
 pss.local-getconfig-path=noc5.es.net
 
 
-spring.freemarker.template-loader-path="classpath:templates, classpath:templates/alu, classpath:templates/mx, classpath:templates/ex, classpath:templates"
+pss.templateDirs=./config/templates/
