adding PSS test harness stuff

--- a/pss/config/test/application.properties
+++ b/pss/config/test/application.properties
@@ -5,7 +5,8 @@ pss.cloginrc=/usr/local/esnet/lib/cloginrc
 
 pss.perform-getconfig=true
 pss.getconfig-host=noc5.es.net
-pss.local-getconfig-path=noc5.es.net
+pss.getconfig-path=/usr/local/esnet/bin/get-config
 
 
-pss.templateDirs=./config/templates/
+pss.template-dirs=./config/templates/
+pss_test.case-directory=./config/test/testbed
