--- a/pss/config/application.properties
+++ b/pss/config/application.properties
@@ -5,7 +5,7 @@ pss.cloginrc=/usr/local/esnet/lib/cloginrc
 
 pss.perform-getconfig=true
 pss.getconfig-host=noc5.es.net
-pss.local-getconfig-path=noc5.es.net
+pss.getconfig-path=/usr/local/esnet/bin/get-config
 
 
 pss.templateDirs=./config/templates/
