simplified devices / adjcies/ positions / addrs configuration

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -25,14 +25,12 @@ rest.internal-password=${startup.defaults.sec_user_password}
 rest.internal-truststore-path=${startup.defaults.ssl_key_store}
 
 proc.timeout-held-after=300
-ui.positions-file=config/positions.json
 
-topo.devices-filename=config/esnet-devices.json
-topo.adjcies-filename=config/esnet-adjacencies.json
+topo.prefix=esnet
 
 pss.default-template-dir=config/pssTemplates
 pss.template-extension=ftl
-pss.addresses-filename=config/esnet-addrs.json
+pss.addresses-filename=config/topo/esnet-addrs.json
 pss.vcid-range=7000-7999
 pss.sdpid-range=7000-7999
 pss.qosid-range=7000-7999
