--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,6 +10,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>core</artifactId>
+    <properties>
+        <testcase.groups/>
+    </properties>
+
+    <profiles>
+        <profile>
+            <id>quick</id>
+            <properties>
+                <testcase.groups>net.es.oscars.QuickTests</testcase.groups>
+            </properties>
+        </profile>
+        <profile>
+            <id>slow</id>
+            <properties>
+                <testcase.groups>net.es.oscars.SlowTests</testcase.groups>
+            </properties>
+        </profile>
+    </profiles>
+
 
     <dependencies>
         <dependency>
@@ -116,6 +135,21 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.13</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <groups>${testcase.groups}</groups>
+                </configuration>
             </plugin>
         </plugins>
     </build>
