handling of PSS resources (choosing, saving etc)

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -37,10 +37,10 @@ proc.timeout-held-after=300
 topo.prefix=esnet
 
 pss.addresses-filename=config/topo/esnet-addrs.json
-pss.vcid-range=7000-7999
-pss.alu-svcid-range=7000-7999
-pss.alu-sdpid-range=7000-7999
-pss.alu-qosid-range=7000-7999
+pss.vcid-range=7000:7999
+pss.alu-svcid-range=7000:7999
+pss.alu-sdpid-range=7000:7999
+pss.alu-qosid-range=7000:7999
 
 authnz.username=admin
 authnz.password=oscars
