test cleanup of spring context loading (finally), app startup & travis runs quieter

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -6,6 +6,7 @@ server.port=8000
 # spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.properties.hibernate.id.new_generator_mappings=true
+spring.jpa.properties.hibernate.dialect = net.es.oscars.helpers.ImprovedH2Dialect
 
 
 server.ssl.enabled=${startup.defaults.ssl_enabled}
