pss config work, started adding pce sub-exceptions

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -42,6 +42,7 @@ pss.vcid-range=7000:7999
 pss.alu-svcid-range=7000:7999
 pss.alu-sdpid-range=7000:7999
 pss.alu-qosid-range=7000:7999
+pss.url=https://localhost:8002/
 
 authnz.username=admin
 authnz.password=oscars
