--- a/pss/config/test/application.properties
+++ b/pss/config/test/application.properties
@@ -1,12 +1,30 @@
-pss.check-filename=config/devices.json
-pss.rancid-host=noc5.es.net
-pss.rancid-dir=/usr/local/libexec/rancid
-pss.cloginrc=/usr/local/esnet/lib/cloginrc
+startup.template-dirs=./config/templates/
+startup.perform-control-plane-check=true
+startup.control-plane-check-filename=config/devices.json
 
-pss.perform-getconfig=true
-pss.getconfig-host=noc5.es.net
-pss.getconfig-path=/usr/local/esnet/bin/get-config
+rancid.host=noc5.es.net
+rancid.dir=/usr/local/libexec/rancid
+rancid.cloginrc=/usr/local/esnet/lib/cloginrc
+
+getconfig.perform=true
+getconfig.host=noc5.es.net
+getconfig.path=/usr/local/esnet/bin/get-config
+
+server.port=8002
+
+server.ssl.enabled=true
+server.ssl.key-store=config/oscars.jks
+server.ssl.key-store-type=JKS
+server.ssl.key-store-password=changeit
+server.ssl.key-alias=oscars
+server.ssl.key-password=changeit
+server.ssl.ciphers=TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256, TLS_DHE_RSA_WITH_AES_128_GCM_SHA256, TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256, TLS_DHE_RSA_WITH_AES_256_GCM_SHA384, TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+
+security.basic.enabled=true
+security.user.name=oscars
+security.user.password=oscars-shared
 
 
-pss.template-dirs=./config/templates/
+spring.main.banner-mode=off
+
 pss_test.case-directory=./config/test/testbed
