add testbed topology, add vlan not found exception, add a precheck result DTO & use it

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -23,9 +23,8 @@ security.user.password=${startup.defaults.sec_user_password}
 
 # logging.config=config/logback.xml
 # logging.file=core.log
-
-# logging.level.org.hibernate: ERROR
-# logging.level.org.springframework.boot.autoconfigure.logging=DEBUG
+logging.level.org.hibernate.tool.hbm2ddl=OFF
+logging.level.org.springframework.web.servlet.mvc.method.annotation=ERROR
 
 spring.main.banner-mode=off
 
@@ -35,7 +34,7 @@ rest.internal-truststore-path=${startup.defaults.ssl_key_store}
 
 proc.timeout-held-after=300
 
-topo.prefix=esnet
+topo.prefix=testbed
 
 pss.addresses-filename=config/topo/esnet-addrs.json
 pss.vcid-range=7000:7999
