rework PSS test structuring, add netlab stuff

--- a/pss/config/application.properties
+++ b/pss/config/application.properties
@@ -1,10 +1,11 @@
 startup.template-dirs=./config/templates/
 startup.perform-control-plane-check=true
-startup.control-plane-check-filename=config/devices.json
+startup.control-plane-check-filename=config/netlab-check.json
 
-rancid.host=noc5.es.net
+rancid.host=netlab-noc.es.net
 rancid.dir=/usr/local/libexec/rancid
-rancid.cloginrc=/usr/local/esnet/lib/cloginrc
+rancid.cloginrc=/home/haniotak/oscars/cloginrc
+rancid.execute=false
 
 getconfig.perform=true
 getconfig.host=noc5.es.net
