--- a/pss/config/test/application.properties
+++ b/pss/config/test/application.properties
@@ -1,10 +1,14 @@
 startup.template-dirs=./config/templates/
 startup.perform-control-plane-check=true
-startup.control-plane-check-filename=config/devices.json
+startup.control-plane-check-filename=config/netlab-check.json
+# startup.control-plane-check-filename=config/testbed-check.json
 
-rancid.host=noc5.es.net
+rancid.host=netlab-noc.es.net
+#rancid.host=noc5.es.net
 rancid.dir=/usr/local/libexec/rancid
-rancid.cloginrc=/usr/local/esnet/lib/cloginrc
+rancid.cloginrc=/home/haniotak/oscars/cloginrc
+#rancid.cloginrc=/usr/local/esnet/lib/cloginrc
+rancid.execute=false
 
 getconfig.perform=true
 getconfig.host=noc5.es.net
@@ -27,4 +31,5 @@ security.user.password=oscars-shared
 
 spring.main.banner-mode=off
 
-pss_test.case-directory=./config/test/testbed
+pss_test.case-directory=./config/test/netlab
+# pss_test.case-directory=./config/test/testbed
