add netlab topology, fix path drawing issue

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -34,7 +34,7 @@ rest.internal-truststore-path=${startup.defaults.ssl_key_store}
 
 proc.timeout-held-after=300
 
-topo.prefix=testbed
+topo.prefix=esnet
 
 pss.addresses-filename=config/topo/esnet-addrs.json
 pss.vcid-range=7000:7999
