--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-# Created by .ignore support plugin (hsz.mobi)
 .idea
 *.iml
+*/target/*
+webui/node_modules
+webui/src/main/resources/static/built/*
