--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>net.es.oscars</groupId>
     <artifactId>newtech</artifactId>
     <packaging>pom</packaging>
-    <version>0.7.0</version>
+    <version>1.0.0-beta</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
