Towards #91 (Make OSCARS poll for new / updated topology files).
Periodically (every hour) do a call to ESDB to grab the current "today" topology.  This requires a valid ESDB API key in the topo.esdb-key property.

Note that all this change does is update files.  It doesn't force OSCARS to process the updated topology, or make changes to its internal topology model.  That functionality is slated for issue #92.

--- a/core/config/application.properties
+++ b/core/config/application.properties
@@ -35,6 +35,9 @@ rest.internal-truststore-path=${startup.defaults.ssl_key_store}
 proc.timeout-held-after=300
 
 topo.prefix=esnet
+topo.import-script-path=../topo/esdb_topo.py
+# Uncomment and replace xxx with an actual ESDB API key
+# topo.esdb-key=xxx
 
 pss.vcid-range=7000:7999
 pss.alu-svcid-range=7000:7999
